--- a/style.css
+++ b/style.css
@@ -100,3 +100,49 @@ button:hover {
 button:active {
     opacity: 0.3;
 }
+
+@media screen and (max-width: 845px) {
+    .container-rigth {
+        display: contents;
+        height: 100vh;
+        width: 40%;
+        position: absolute;
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 41.5px;
+        cursor: pointer;
+    }
+    .link-header {
+        display: none;
+    }
+
+    .imagem {
+        margin: 50vw;
+        width: 375px;
+        height: 415px;
+        position: relative;
+        margin-top: -30px;
+        right: 10px;
+    }
+
+    h1 {
+        margin-top: 90px;
+        width: 51vh;
+        text-align: center;
+        line-height: 95px;
+    }
+
+    p {
+        width: 457px;
+        text-align: center;
+        font-size: 30px;
+    }
+
+    button {
+        margin-top: 80px;
+        margin-left: 160px;
+        padding: 25px 151px 20px 150px;
+        border-radius: 55px;
+        text-align: center;
+    }
+}
